Fixed padding on mobile version

--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -45,6 +45,7 @@
 @media (max-width: 576px) {
     .app {
         width: 300px;
+        padding: 25px 0 0 0;
         &__header {
             flex-direction: column;
             align-items: center
